@@ -1,3 +1,7 @@
+2015-09-28  c.hetherington  <cth@carlh.net>
+
+	* Fix update of display when changing DCP video rate (#699).
+
 2015-09-28  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.3.8 released.
